[lib]
name = "fut_rating"

[package]
name = "fut-rating"
version = "0.1.0"
authors = ["delta <delta4d@gmail.com>"]
edition = "2018"
description = "Fut rating helper"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/delta4d/fut-rating"
repository = "https://github.com/delta4d/fut-rating"
readme = "README.md"
keywords = ["game", "fut"]
categories = ["command-line-utilities"]

[dependencies]
itertools = "0.10.0"
clap = "2.33.3"